tests/snapshots/sfc/ts/script_setup__props_with_method_signatures_in_object.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, createCommentVNode as _createCommentVNode } from "vue"


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: {
    context: { type: Object as PropType<{ open(): void; close(): void; isOpened: boolean }>, required: true }
  },
  setup(__props: any) {


return (_ctx: any,_cache: any) => {
  return (__props.context.isOpened)
      ? (_openBlock(), _createElementBlock("div", { key: 0 }, "Open"))
      : _createCommentVNode("v-if", true)
}
}

})
