tests/snapshots/sfc/ts/script_setup__props_with_readonly_arrays.snap
---
source: crates/vue_compiler_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent, PropType } from 'vue'
import { Fragment as _Fragment, openBlock as _openBlock, createElementBlock as _createElementBlock, renderList as _renderList, toDisplayString as _toDisplayString } from "vue"


export default defineComponent({
  name: 'test',
  props: {
    options: { type: Object as PropType<readonly { value: string | number; label: string }[]>, required: true },
  },
  setup(__props) {


return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("select", null, [ (_openBlock(true), _createElementBlock(_Fragment, null, _renderList(_ctx.options, (opt) => { return (_openBlock(), _createElementBlock("option", { key: opt.value }, _toDisplayString(opt.label), 1 /* TEXT */)) }), 128 /* KEYED_FRAGMENT */)) ]))
}
}

})
