tests/snapshots/sfc/ts/script_setup__props_with_union_types.snap
---
source: crates/vue_compiler_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent, PropType } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString } from "vue"


export default defineComponent({
  name: 'test',
  props: {
    variant: { type: ButtonVariant as PropType<ButtonVariant>, required: true },
  },
  setup(__props) {

  | { type: "link"; href: string }
  | { type: "button"; onClick: () => void }

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(__props.variant.type), 1 /* TEXT */))
}
}

})
