tests/snapshots/sfc/ts/script_setup__reactive_binding.snap
---
source: crates/vue_compiler_sfc/src/snapshot_tests.rs
assertion_line: 98
expression: ts_output
---
import { defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString } from "vue"

import { reactive } from 'vue'

export default defineComponent({
  name: 'test',
  setup(__props) {

const state = reactive({ count: 0 })

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(state.count), 1 /* TEXT */))
}
}

})
