tests/snapshots/sfc/ts/script_setup__reco_guidanceprogresslapinputbtn_pattern.snap
---
source: crates/vue_compiler_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent, PropType } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString, normalizeClass as _normalizeClass, withModifiers as _withModifiers } from "vue"

import { computed } from 'vue';

export default defineComponent({
  name: 'test',
  setup(__props) {

const props = __props
const lapClass = computed(() => `lap-${props.guidanceProgress.progressLap}`);
const isChangedProgressLap = computed(
  () => props.guidanceProgress.progressLap !== props.guidanceProgress.originalProgressLap
);

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("button", { class: _normalizeClass([{ _ctx.disabled }, lapClass.value]), disabled: _ctx.disabled, onClick: _withModifiers(() => {}, ["prevent"]) }, "\n    " + _toDisplayString(_ctx.guidanceProgress.progressUnit.value) + "\n  ", 11 /* TEXT, CLASS, PROPS */, ["disabled", "onClick"]))
}
}

})
