tests/snapshots/sfc/ts/script_setup__reco_roundedbtn_pattern.snap
---
source: crates/vue_compiler_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent, PropType } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, renderSlot as _renderSlot } from "vue"


export default defineComponent({
  name: 'test',
  setup(__props) {


return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("button", { disabled: _ctx.disabled }, [ _renderSlot(_ctx.$slots, "default") ], 8 /* PROPS */, ["disabled"]))
}
}

})
